# PrometheonOS

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  TASKS.md  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
ai-agent/: package.json  tsconfig.json
ai-agent/src/: agent.test.ts  agent.ts  index.ts  nats.test.ts  nats.ts  parse.test.ts  parse.ts  prompts.test.ts  prompts.ts  schema.test.ts  schema.ts  trace.ts
ai-agent/src/providers/: anthropic.ts  index.test.ts  index.ts  mock.test.ts  mock.ts  ollama.ts  openai.ts  types.ts
contracts/: README.md  openapi-submit.yaml
contracts/json-schema/: decision.schema.json  telemetry-event.schema.json
contracts/ts/: decision.d.ts  telemetry-event.d.ts
crates/prometheon-bundle/: Cargo.toml
crates/prometheon-bundle/src/: assembly.rs  client.rs  fees.rs  jsonrpc.rs  lib.rs  next_leader.rs  status.rs  tip.rs  tip_accounts.rs  tip_floor.rs
crates/prometheon-bundle/tests/: assembly.rs  fees.rs  jsonrpc.rs  status.rs  tip.rs  tip_accounts.rs
crates/prometheon-core/: Cargo.toml
crates/prometheon-core/src/: config.rs  engine.rs  leader.rs  lib.rs  main.rs  metrics.rs  proof.rs  proof_run.rs  rpc.rs  saga.rs  sinks.rs  submission.rs  submit.rs  wallet.rs
crates/prometheon-core/tests/: proof_pipeline.rs  saga_agent.rs  saga_pipeline.rs  submit_receipt.rs
crates/prometheon-core/tests/common/: mod.rs
crates/prometheon-failure/: Cargo.toml
crates/prometheon-failure/src/: classify.rs  lib.rs
crates/prometheon-failure/tests/: classify.rs
crates/prometheon-faultinject/: Cargo.toml
crates/prometheon-faultinject/src/: lib.rs
crates/prometheon-faultinject/tests/: chaos_loop.rs  scenarios.rs
crates/prometheon-ingest/: Cargo.toml
crates/prometheon-ingest/src/: backpressure.rs  lib.rs  slot_tracker.rs  status_map.rs  yellowstone.rs
crates/prometheon-ingest/tests/: backpressure.rs  slot_tracker.rs
crates/prometheon-lifecycle/: Cargo.toml
crates/prometheon-lifecycle/src/: lib.rs  lifecycle.rs
crates/prometheon-lifecycle/tests/: lifecycle.rs
crates/prometheon-netmodel/: Cargo.toml
crates/prometheon-netmodel/src/: lib.rs  metrics.rs  model.rs  window.rs
crates/prometheon-netmodel/tests/: metrics.rs  model.rs  window.rs
crates/prometheon-retry/: Cargo.toml
crates/prometheon-retry/src/: backoff.rs  lib.rs  orchestrator.rs  policy.rs
crates/prometheon-retry/tests/: retry.rs
crates/prometheon-telemetry/: Cargo.toml
crates/prometheon-telemetry/src/: decision.rs  events.rs  export.rs  lib.rs  nats.rs  postgres.rs
crates/prometheon-telemetry/tests/: events.rs  nats_live.rs  postgres_live.rs  schema.rs
crates/prometheon-types/: Cargo.toml
crates/prometheon-types/src/: lib.rs  slot.rs
dashboard/: .gitkeep  next.config.ts  package.json  tsconfig.json
dashboard/__tests__/: format.test.ts  live.test.ts  mock.test.ts  proof.test.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/telemetry/: route.ts
dashboard/components/: Bundles.tsx  Decisions.tsx  ExecutionRail.tsx  Header.tsx  NetworkHealth.tsx  ObserveStrip.tsx  ReceiptStrip.tsx  SlotStream.tsx
dashboard/lib/: format.ts  live.ts  mock.ts  proof.ts  types.ts
dashboard/scripts/: copy-proof-data.mjs
docs/: ARCHITECTURE-PUBLIC.md  ARCHITECTURE.md  DASHBOARD-WIREFRAMES.md  DEMO-SCRIPT.md  DIAGRAMS.md  EXPERIMENTS.md  FAILURE-TAXONOMY.md  INTEGRATION.md  SUBMISSION-POST.md  SUBMISSION.md  TELEMETRY-SCHEMA.md
docs/RFCs/: 0001-ipc-bus.md  0002-language-and-stack-tradeoffs.md  0003-retry-orchestrator.md
infra/: docker-compose.yml  prometheus.yml
logs/: ai-decision-trace.md  ai-decisions.json  lifecycle-log.json  lifecycle-log.md
scripts/: gen-contracts.sh  run-proof.sh
