[package]
name = "prometheon-faultinject"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
prometheon-failure = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
prometheon-retry = { workspace = true }
