[package]
name = "prometheon-lifecycle"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
prometheon-types = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
