[package]
name = "prometheon-telemetry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
prometheon-types = { workspace = true }
prometheon-lifecycle = { workspace = true }
prometheon-failure = { workspace = true }
prometheon-netmodel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
chrono = { workspace = true }
